# hoppy

./: install.sh
tests/: run-all-tests.sh  test-runner.sh
tests/basic/: run-test.sh
tests/basic/cpp/: Makefile
tests/basic/hs/: hoppy-tests-basic.cabal
tests/circular/: run-test.sh
tests/stl/: run-test.sh
