name: hoppy-tests-basic
version: 0.3.0
license: AGPL-3
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015-2016 Bryan Gardiner
build-type: Simple
cabal-version: >=1.10

library
  other-extensions:
      FlexibleInstances
    , MultiParamTypeClasses
    , OverlappingInstances
    , TypeSynonymInstances
    , UndecidableInstances
  build-depends:
      base >=4.7 && <4.9
    , hoppy-runtime
    , containers
  exposed-modules:
      Foreign.Hoppy.Test.Basic
      Foreign.Hoppy.Test.Basic.HsBox
  c-sources: cbits/basic.cpp cbits/functions.cpp
  include-dirs: cbits /Users/lingnan/builds/hoppy/tests/basic/cpp
  extra-lib-dirs: /Users/lingnan/builds/hoppy/tests/basic/cpp
  extra-libraries: hoppy-tests-basic-cpp stdc++ c++
  cc-options: -std=c++11 -stdlib=libc++
  -- ld-options: -L/Users/lingnan/builds/hoppy/tests/basic/cpp -l:libhoppy-tests-basic.so
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind

test-suite tests-basic
  type: exitcode-stdio-1.0
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  build-depends:
      base >=4.7 && <4.9
    , containers >=0.5 && <0.6
    , hoppy-runtime
    , hoppy-tests-basic
    , HUnit
